# gomoku2go

./: go.mod  go.sum  main  meson.build
cmd/: main.go
data/: com.github.infastin.gomoku2go.gschema.xml  meson.build
internal/: control.go  game.go  view.go
internal/gomoku/app/: action.go  app.go
internal/gomoku/game/: game.go  player.go
internal/gomoku/view/: board.go  prefs.go  stopwatch.go  view.go
internal/gomoku/view/resources/: menu.ui  prefs.ui  style.css  titlebar.ui  window.ui
internal/sig/: sig.go
